control_lth/output/errors/error_1137353
13:4: not a valid test operator: (
13:4: not a valid test operator: 470.129.06
  File "prune.py", line 643
    else:
    ^
SyntaxError: invalid syntax
